src/z80asm/z80asm2/t/40-syntax/expected/ds_numeric_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/ds_numeric_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/ds_numeric_01.asm...
t/40-syntax/input/ds_numeric_01.asm:1:3: error: Expression expected
    ds
      ^
t/40-syntax/input/ds_numeric_01.asm:2:1: error: Unterminated expression after "ds"
    ds ,
    ^
t/40-syntax/input/ds_numeric_01.asm:3:7: error: Unexpected token: ","
    ds 1,2,
          ^
Program: ds_numeric_01
    Modules:
        Module: ds_numeric_01 (current)
            Sections:
                Section: "" (current)
                    Size: 0
    Statements:
        DefsNumericStmt
            Location: t/40-syntax/input/ds_numeric_01.asm:4:1
            Address: 0
            Size:
                ExprBinary: +
                    Location: t/40-syntax/input/ds_numeric_01.asm:4:6
                    Value type: Unknown
                    Expr: 1+2*3
                    LHS:
                        ExprLiteralInt: 1
                            Location: t/40-syntax/input/ds_numeric_01.asm:4:4
                            Value type: Unknown
                    RHS:
                        ExprBinary: *
                            Location: t/40-syntax/input/ds_numeric_01.asm:4:8
                            Value type: Unknown
                            LHS:
                                ExprLiteralInt: 2
                                    Location: t/40-syntax/input/ds_numeric_01.asm:4:6
                                    Value type: Unknown
                            RHS:
                                ExprLiteralInt: 3
                                    Location: t/40-syntax/input/ds_numeric_01.asm:4:8
                                    Value type: Unknown
            Filler byte:
                ExprLiteralInt: 0
                    Location: t/40-syntax/input/ds_numeric_01.asm:4:1
                    Value type: Unknown
        DefsNumericStmt
            Location: t/40-syntax/input/ds_numeric_01.asm:5:1
            Address: 0
            Size:
                ExprBinary: +
                    Location: t/40-syntax/input/ds_numeric_01.asm:5:6
                    Value type: Unknown
                    Expr: 1+2*3
                    LHS:
                        ExprLiteralInt: 1
                            Location: t/40-syntax/input/ds_numeric_01.asm:5:4
                            Value type: Unknown
                    RHS:
                        ExprBinary: *
                            Location: t/40-syntax/input/ds_numeric_01.asm:5:8
                            Value type: Unknown
                            LHS:
                                ExprLiteralInt: 2
                                    Location: t/40-syntax/input/ds_numeric_01.asm:5:6
                                    Value type: Unknown
                            RHS:
                                ExprLiteralInt: 3
                                    Location: t/40-syntax/input/ds_numeric_01.asm:5:8
                                    Value type: Unknown
            Filler byte:
                ExprBinary: +
                    Location: t/40-syntax/input/ds_numeric_01.asm:5:13
                    Value type: Unknown
                    Expr: 2+3*4
                    LHS:
                        ExprLiteralInt: 2
                            Location: t/40-syntax/input/ds_numeric_01.asm:5:11
                            Value type: Unknown
                    RHS:
                        ExprBinary: *
                            Location: t/40-syntax/input/ds_numeric_01.asm:5:15
                            Value type: Unknown
                            LHS:
                                ExprLiteralInt: 3
                                    Location: t/40-syntax/input/ds_numeric_01.asm:5:13
                                    Value type: Unknown
                            RHS:
                                ExprLiteralInt: 4
                                    Location: t/40-syntax/input/ds_numeric_01.asm:5:15
                                    Value type: Unknown
